[#35] add COU {uuid}-tk and token-holders logic
