# server/swagger_server/database/models/projects.py
@@ -28,6 +28,12 @@ projects_storage = db.Table('projects_storage',
                            db.Column('projects_id', db.Integer, db.ForeignKey('projects.id'), primary_key=True)
                            )
 
+token_holders = db.Table('token_holders',
+                           db.Model.metadata,
+                           db.Column('people_id', db.Integer, db.ForeignKey('people.id'), primary_key=True),
+                           db.Column('projects_id', db.Integer, db.ForeignKey('projects.id'), primary_key=True)
+                           )
+
 
 class FabricProjects(BaseMixin, TimestampMixin, TrackingMixin, db.Model):
     """
@@ -51,6 +57,7 @@ class FabricProjects(BaseMixin, TimestampMixin, TrackingMixin, db.Model):
     - projects_storage - one-to-many storage
     - publications - publications linked to project
     - tags - array of tag strings
+    - token_holders - one-to-many people
     - uuid - unique universal identifier
     """
     query: db.Query
@@ -61,11 +68,10 @@ class FabricProjects(BaseMixin, TimestampMixin, TrackingMixin, db.Model):
     co_cou_id_pc = db.Column(db.Integer, nullable=True)
     co_cou_id_pm = db.Column(db.Integer, nullable=True)
     co_cou_id_po = db.Column(db.Integer, nullable=True)
+    co_cou_id_tk = db.Column(db.Integer, nullable=True)
     description = db.Column(db.Text, nullable=False)
-    # TODO: add expires_on with 1.4.2 along with the inclusion of fixtures
     expires_on = db.Column(db.DateTime(timezone=True), nullable=True)
     facility = db.Column(db.String(), default=os.getenv('CORE_API_DEFAULT_FACILITY'), nullable=False)
-    # TODO: add is_locked with 1.4.2 along with the inclusion of fixtures
     is_locked = db.Column(db.Boolean, default=False, nullable=False)
     is_public = db.Column(db.Boolean, default=True, nullable=False)
     name = db.Column(db.String(), nullable=False)
@@ -79,10 +85,12 @@ class FabricProjects(BaseMixin, TimestampMixin, TrackingMixin, db.Model):
                                      backref=db.backref('project_owners', lazy=True))
     project_storage = db.relationship('FabricStorage', secondary=projects_storage, lazy='subquery',
                                       backref=db.backref('projects_storage', lazy=True))
-    # TODO: add publications with 1.4.x prior to Sept 2023
+    # TODO: add publications with 1.6.x prior to Sept 2023
     # publications = db.relationship('Publications', secondary=publications, lazy='subquery',
     #                                backref=db.backref('projects', lazy=True))
     tags = db.relationship('ProjectsTags', backref='projects', lazy=True)
+    token_holders = db.relationship('FabricPeople', secondary=token_holders, lazy='subquery',
+                                     backref=db.backref('token_holders', lazy=True))
     uuid = db.Column(db.String(), primary_key=False, nullable=False)
 
 
